# exploring-synthea-data

./: LICENSE  README.md  pyproject.toml  requirements.txt
exploration/: data_exploration.sync.ipynb  data_exploration.sync.py
